tests/diagnostics/basic.golden
basic.curlee:1:11: error: test error
  |
  | let x = 1 + 2;
  |           ^
